@@ -1,6 +1,8 @@
 
 ####   Don't forget to change the version number in configure.ac!   ####
 
+16 Feb 2005 ECPS:VM Fix : Revalidate AIA after changing IA - Ivan Warren
+16 Feb 2005 ECPS:VM Fix : Bug in CPA/SCNRU - Ivan Warren
 14 Jan 2005 Added '*' comment command as official do-nothing command - Fish
 14 Feb 2005 Add zArch (64-bit mode) support to UPT (Update Tree)
             and CFC (Compare and Form Codeword) instructions - Fish
